@@ -9,6 +9,12 @@ reverse time order.
 
 =======
 
+Tag: V02-00-30
+2021-01-06 Mikhail Dubrovin
+	modified:   PyDetectorAccess.py - code cleaning - remove blanks and comments
+	modified:   ../src/AreaDetector.py - add *psf methods using PSCalib/GeometryAccess -> UtilsPSF
+	new file:   test-issues-2022.py - use it as test examples
+
 Tag: V02-00-29
 2021-12-10 Mikhail Dubrovin
 - app/datinfo for id_jungfrau source -> det.source
